# exinst

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  cabal.project  default.nix  exinst.cabal  hs-overlay.nix  nixpkgs.nix  pkg.nix  release.nix  shell.nix
example/: example.hs
example/nix/: shell.ghc7101.nix
exinst/: CHANGELOG.md  README.md  default.nix  exinst.cabal  pkg.nix  release.nix
exinst-aeson/: CHANGELOG.md  LICENSE.txt  README.md  default.nix  exinst-aeson.cabal  pkg.nix
exinst-aeson/lib/Exinst/: Aeson.hs
exinst-aeson/nix/: build.ghc7101.nix  build.ghcjs.nix  default.nix  shell.nix
exinst-aeson/src/lib/Exinst/Instances/: Aeson.hs
exinst-aeson/tests/: Main.hs
exinst-base/: CHANGELOG.md  README.md  exinst-base.cabal  pkg.nix
exinst-base/lib/Exinst/: Base.hs
exinst-base/tests/: Main.hs
exinst-bytes/: CHANGELOG.md  README.md  default.nix  exinst-bytes.cabal  pkg.nix
exinst-bytes/lib/Exinst/: Bytes.hs
exinst-bytes/nix/: build.ghc7101.nix  build.ghcjs.nix  default.nix
exinst-bytes/src/lib/Exinst/Instances/: Bytes.hs
exinst-bytes/tests/: Main.hs
exinst-cereal/: CHANGELOG.md  README.md  exinst-cereal.cabal  pkg.nix
exinst-cereal/lib/Exinst/: Cereal.hs
exinst-cereal/tests/: Main.hs
exinst-deepseq/: CHANGELOG.md  default.nix  exinst-deepseq.cabal
exinst-deepseq/nix/: build.ghc7101.nix  build.ghcjs.nix  default.nix
exinst-deepseq/src/lib/Exinst/Instances/: DeepSeq.hs
exinst-hashable/: CHANGELOG.md  LICENSE.txt  README.md  default.nix  exinst-hashable.cabal
exinst-hashable/nix/: build.ghc7101.nix  build.ghcjs.nix  default.nix  shell.ghc7101.nix  shell.ghcjs.nix  shell.nix
exinst-hashable/src/lib/Exinst/Instances/: Hashable.hs
exinst-serialise/: CHANGELOG.md  LICENSE.txt  README.md  exinst-serialise.cabal  pkg.nix
exinst-serialise/lib/Exinst/: Serialise.hs
exinst-serialise/tests/: Main.hs
exinst/lib/: Exinst.hs
exinst/lib/Exinst/: Base.hs  Binary.hs  DeepSeq.hs  Hashable.hs  Internal.hs  QuickCheck.hs
exinst/lib/Exinst/Base/: Eq.hs  Ord.hs  Read.hs  Show.hs
exinst/lib/Exinst/Internal/: Product.hs  Show.hs  Sum.hs
exinst/nix/: build.ghc7101.nix  build.ghcjs.nix  default.nix  shell.nix
exinst/src/lib/: Exinst.hs
exinst/src/lib/Exinst/: Internal.hs  Singletons.hs
exinst/src/lib/Exinst/Instances/: Aeson.hs  Base.hs  Bytes.hs  DeepSeq.hs  QuickCheck.hs
exinst/src/lib/Exinst/Singletons/: Internal.hs
exinst/tests/: Main.hs
lib/: Exinst.hs
lib/Exinst/Instances/: Aeson.hs  Base.hs  Binary.hs  Bytes.hs  Cereal.hs  DeepSeq.hs  Hashable.hs  QuickCheck.hs  Serialise.hs
lib/Exinst/Internal/: Product.hs  Sum.hs
nix/: default.nix  sources.json
src/lib/: Exinst.hs
src/lib/Exinst/: Internal.hs
src/lib/Exinst/Instances/: Aeson.hs  Base.hs  Binary.hs  Bytes.hs  Cbor.hs  Cereal.hs  Hashable.hs  QuickCheck.hs  Serialise.hs
src/lib/Exinst/Internal/: Product.hs  Sum.hs
tests/: Main.hs
