name:                exinst-aeson
version:             0.0.1
author:              Renzo Carbonara
maintainer:          renzoλcarbonara.com.ar
copyright:           Renzo Carbonara 2015
license:             BSD3
license-file:        LICENSE.txt
category:
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
      Exinst.Instances.Aeson
  build-depends:
      aeson >=0.8 && <0.10
    , base >=4.8 && <4.9
    , constraints >=0.4 && <0.5
    , exinst >=0.0 && <0.1
    , singletons >=1.1 && <1.2
  ghcjs-options: -Wall -Werror
  ghc-options: -Wall -Werror
