name:                exinst-aeson
version:             0.1.0.1
author:              Renzo Carbonara
maintainer:          renzoλcarbonara.com.ar
copyright:           Renzo Carbonara 2015
license:             BSD3
license-file:        LICENSE.txt
extra-source-files:  README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Derive instances for the `aeson` library for your existential types.
homepage:            https://github.com/k0001/exinst
bug-reports:         https://github.com/k0001/exinst/issues

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
      Exinst.Instances.Aeson
  build-depends:
      aeson >=0.8 && <0.11
    , base >=4.7 && <4.9
    , constraints >=0.4 && <0.5
    , exinst >=0.1 && <0.2
    , singletons >=1.1 && <2.1
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2
