name:                exinst-base
version:             0.1
author:              Renzo Carbonara
maintainer:          renλren!zone
copyright:           Renzo Carbonara 2015
license:             BSD3
license-file:        LICENSE.txt
extra-source-files:  README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Dependent pairs and their instances (from the base library).
homepage:            https://github.com/k0001/exinst
bug-reports:         https://github.com/k0001/exinst/issues


library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules:
      Exinst.Base
  build-depends:
      base >=4.9 && <5.0
    , exinst
    , constraints >=0.4
    , deepseq
    , hashable
    , profunctors >=5.0
    , singletons >=2.6
    , singletons-base
    , QuickCheck
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
     base
   , bytestring
   , constraints
   , deepseq
   , exinst
   , profunctors
   , QuickCheck
   , singletons
   , tasty
   , tasty-hunit
   , tasty-quickcheck
  ghcjs-options: -Wall -O0
  ghc-options: -Wall -O0
