name:                exinst-deepseq
version:             0.2
author:              Renzo Carbonara
maintainer:          renzoλcarbonara.com.ar
copyright:           Renzo Carbonara 2015-2016
license:             BSD3
license-file:        LICENSE.txt
extra-source-files:  README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Derive instances for the `deepseq` library for your existential types.
homepage:            https://github.com/k0001/exinst
bug-reports:         https://github.com/k0001/exinst/issues

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
      Exinst.Instances.DeepSeq
  build-depends:
      base >=4.9 && <5.0
    , deepseq >=1.4 && <1.5
    , constraints >=0.4 && <0.9
    , exinst >=0.2 && <0.3
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2
