name:                exinst-hashable
version:             0.1
author:              Renzo Carbonara
maintainer:          renzoλcarbonara.com.ar
copyright:           Renzo Carbonara 2015
license:             BSD3
license-file:        LICENSE.txt
extra-source-files:  README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Derive instances for the `hashable` library for your existential types.
homepage:            https://github.com/k0001/exinst
bug-reports:         https://github.com/k0001/exinst/issues

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
      Exinst.Instances.Hashable
  build-depends:
      base >=4.7 && <4.9
    , hashable >=1.2 && <1.3
    , constraints >=0.4 && <0.5
    , exinst >=0.1 && <0.2
    , singletons >=1.1 && <1.2
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2