name:                exinst-serialise
version:             0.7
author:              Renzo Carbonara
maintainer:          renλren!zone
copyright:           Renzo Carbonara 2015-2018
license:             BSD3
license-file:        LICENSE.txt
extra-source-files:  README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Dependent pairs and their instances.
homepage:            https://github.com/k0001/exinst
bug-reports:         https://github.com/k0001/exinst/issues


library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Exinst.Serialise
  build-depends:
      base >=4.9 && <5.0
    , serialise
    , constraints
    , exinst >=0.7
    , singletons
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
     base
   , binary
   , exinst
   , exinst-serialise
   , QuickCheck
   , serialise
   , tasty
   , tasty-quickcheck
  ghcjs-options: -Wall -O0
  ghc-options: -Wall -O0
