name:                exinst
version:             0.9
author:              Renzo Carbonara
maintainer:          renλren!zone
copyright:           Renzo Carbonara 2015
license:             BSD3
license-file:        LICENSE.txt
extra-source-files:  README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       1.18
synopsis:            Dependent pairs and their instances.
homepage:            https://github.com/k0001/exinst
bug-reports:         https://github.com/k0001/exinst/issues


library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules:
      Exinst
  other-modules:
      Exinst.Internal
      Exinst.Internal.Product
      Exinst.Internal.Sum
      Exinst.Binary
      Exinst.DeepSeq
      Exinst.Hashable
      Exinst.QuickCheck
  build-depends:
      base >=4.9 && <5.0
    , binary
    , constraints >=0.4
    , deepseq
    , hashable
    , profunctors >=5.0
    , singletons >= 3.0
    , QuickCheck
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2
